plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
  id 'com.github.johnrengelman.shadow' version '8.1.0' // Add this line
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.9.2'
}

java {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21
}



tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'com.example.internduru'
  mainClass = 'com.example.internduru.Launcher'
}

javafx {
  version = '21.0.2'
  modules = ['javafx.controls', 'javafx.fxml']
}


dependencies {
  implementation 'org.openjfx:javafx-controls:21.0.2'
  implementation 'org.openjfx:javafx-fxml:21.0.2'

  implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
  implementation 'org.json:json:20231013'

  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}


//"./gradlew shadowJar"
shadowJar {
  manifest {
    attributes (
            'Main-Class': 'com.example.internduru.Launcher'
    )
  }
}

run {
  jvmArgs = [
          '--module-path', 'com.example.internduru',
          '--add-modules', 'javafx.controls: 21.0.2, javafx.fxml: 21.0.2'
  ]
}

test {
  useJUnitPlatform()
}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = [
          '--strip-debug',
          '--compress', '2',
          '--no-header-files',
          '--no-man-pages',
          '--add-modules', 'javafx.controls,javafx.fxml' // Ensure the correct modules are included
  ]
  launcher {
    name = 'app'
  }
}



jlinkZip {
  group = 'distribution'
}
